2007-02-11  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: don't limit the store to
	"input.mouse", list all input devices.

2007-02-11  Sven Neumann  <sven@gimp.org>

	* configure.in: check for libhal if Linux Input support is enabled.

	* modules/Makefile.am
	* modules/gimpinputdevicestore.[ch]: added class derived from
	GtkListStore that keeps a list of devices with capability
	"input.mouse".

	* modules/controller_linux_input.c: for now, just instantiate a
	GimpInputDeviceStore.

2007-02-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcontainer.c (gimp_container_deserialize): plug leak
	introduced with last commit: simply always use the deserialized
	name, also on ojects already existing in the container.

2007-02-10  Sven Neumann  <sven@gimp.org>

	* modules/controller_linux_input.c
	* modules/controller_midi.c: changed license to GPL, updated
	copyright and module info.

2007-02-10  Michael Natterer  <mitch@gimp.org>

	Made templates say "ppi" instead of "dpi". Fixes bug #376990:

	* app/core/gimp-templates.c
	(gimp_templates_migrate_get_child_by_name): find the child also
	if the name differs only in the substrings "dpi" and "ppi".

	* app/core/gimpcontainer.c (gimp_container_deserialize): if we
	found a child, give it the deserialized name if it isn't the same
	as its old name.

	* etc/templaterc: applied patch from Michael Schumacher that
	replaces "dpi" by "ppi".

2007-02-10  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c: added some code stolen from
	DirectFB and forgotten on my disk a long time ago which queries
	the input device for available keys and axes (just for debugging
	purposes for now). Also add one more button event and some
	debugging output for incoming events.

2007-02-09  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c (linux_input_read_event): fix
	last commit a bit...

2007-02-09  Michael Natterer  <mitch@gimp.org>
