@@ -1,3 +1,10 @@
+2007-02-12  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: lower minimum required version of libhal to 0.5.7.
+
+	* modules/gimpinputdevicestore.c: don't list PC Speaker, even
+	though the kernel claims that it would be an input device.
+
 2007-02-11  Sven Neumann  <sven@gimp.org>
 
 	* modules/gimpinputdevicestore.c: don't limit the store to
